--- a/Views/Users/_UsersList.cshtml
+++ b/Views/Users/_UsersList.cshtml
@@ -1,6 +1,6 @@
-﻿<h2>Hello it's users page</h2>
+﻿<h2 class="text-center my-4">Hello it's users page</h2>
 
-<div ng-app="usersApp">
+<div ng-app="usersApp" class="mt-5">
     <div class="container" ng-controller="UsersController">
         <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
             <div class="modal-dialog">
