--- a/Views/Users/_UsersList.cshtml
+++ b/Views/Users/_UsersList.cshtml
@@ -85,9 +85,22 @@
             </div>
         </div>
     </div>
+
+    <button onclick="sendEmai()">send emali</button>
 </div>
 
 <script>
+    function sendEmai() {
+        console.log("mail sended")
+        $.post("api/mail", {
+            To: "kosaniakm@gmail.com",
+            From: "candleshooplviv@gmail.com",
+            Subject: "kurwa test",
+            Body: "kurwa text"
+        })
+            .then(res => console.log(res))
+            .catch(err => console.log(err))
+    }
     (function () {
         angular.module('usersApp', []).controller('UsersController', usersController)
 
